new api with different zones
